--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha -R spec -t 5000"
   },
+  "bin": {
+    "ansi-html": "./bin/ansi-html"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/Tjatse/ansi-html.git"
@@ -18,7 +21,7 @@
   "author": {
     "name": "Tjatse"
   },
-  "license": "Apache, Version 2.0",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Tjatse/ansi-html/issues"
   },
@@ -28,11 +31,20 @@
   "dependencies": {
   },
   "devDependencies": {
-    "chalk": "~1.1.1",
     "mocha": "^1.21.4",
     "chai": "^1.9.1",
-    "lodash": "~2.4.1"
+    "chalk": "^1.1.3",
+    "lodash": "^2.4.2"
   },
   "readmeFilename": "README.md",
-  "homepage": "https://github.com/Tjatse/ansi-html"
+  "homepage": "https://github.com/Tjatse/ansi-html",
+  "standard": {
+    "ignore": [],
+    "globals": [
+      "describe",
+      "it",
+      "before",
+      "after"
+    ]
+  }
 }
