--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "ansi-html",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "description": "An elegant lib that converts the chalked (ANSI) text to HTML.",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha -R spec -t 5000"
+    "test": "./node_modules/.bin/mocha"
   },
   "bin": {
     "ansi-html": "./bin/ansi-html"
@@ -33,8 +33,7 @@
   "devDependencies": {
     "mocha": "^1.21.4",
     "chai": "^1.9.1",
-    "chalk": "^1.1.3",
-    "lodash": "^2.4.2"
+    "chalk": "^1.1.3"
   },
   "readmeFilename": "README.md",
   "homepage": "https://github.com/Tjatse/ansi-html",
